# Syren-Tuner

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  studio-jsonl-protocol.md
examples/: quadratic_fit.py  studio_worker_session.jsonl
src/syren_tuner/: __init__.py  cli.py  errors.py  parameters.py  serialization.py  study.py  trials.py
src/syren_tuner/evaluators/: __init__.py  base.py  callable.py
src/syren_tuner/optimizers/: __init__.py  base.py  coordinate_search.py  grid_search.py  optuna_adapter.py  random_search.py  scipy_adapter.py
src/syren_tuner/protocol/: __init__.py  jsonl.py  messages.py
src/syren_tuner/worker/: __init__.py  studio_worker.py
tests/: test_cli_worker.py  test_jsonl_protocol.py  test_optimizers.py  test_parameters.py  test_study.py
