[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "syren-tuner"
version = "0.1.0"
description = "Python optimization layer for tuning Syren agent-based model parameters."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Syren" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
optuna = ["optuna>=3.6"]
scipy = ["scipy>=1.12"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
all = [
  "optuna>=3.6",
  "scipy>=1.12",
]

[project.scripts]
syren-tuner = "syren_tuner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/syren_tuner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

